--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_nfs
 description: "High-performance NFS client for Flutter with zero-copy optimizations, powered by libnfs."
-version: 0.2.0
-repository: https://github.com/bill/flutter_nfs
-issue_tracker: https://github.com/bill/flutter_nfs/issues
+version: 1.0.0
+repository: https://github.com/bill0015/flutter_nfs
+issue_tracker: https://github.com/bill0015/flutter_nfs/issues
 
 environment:
   sdk: ^3.1.0
